One container implementation & CSS updates
Accordion: Implemented arrow updating if it is open or closed with tailwind

HTML & JS: Updated to make code into one container

styles.css: Deleted file

--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
 </head>
 <body>
-    <div class="container">
-        <div class="tabs" id="tabs"></div>
-        <div class="accordion" id="accordion"></div>
+    <div class="@container" id="container">
     </div>
 
     <script src="script.js"></script>
