--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
 </head>
 <body>
-    <div class="@container" id="container">
+    <div class="@container w-auto m-auto md:p-10" id="container">
     </div>
 
     <script src="script.js"></script>
